<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/globalLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:id="@+id/userAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:layout_marginTop="-70dp"
        android:adjustViewBounds ="true"/>

    <LinearLayout
        android:background="@color/colorGrey"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:padding="12dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="30sp"
                android:text="user name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:tint="#FF80AB"
                    app:srcCompat="@drawable/ic_localisation"
                    tools:srcCompat="@drawable/ic_localisation" />
                <TextView
                    android:id="@+id/userAdress"
                    android:textColor="@color/colorBlack"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="user adress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#00BB2F2F"
                    android:gravity="center_vertical"
                    android:tint="#FF80AB"
                    app:srcCompat="@drawable/ic_call_24px"
                    tools:srcCompat="@drawable/ic_call_24px" />
                <TextView
                    android:id="@+id/userPhone"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/colorBlack"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="user phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:tint="#FF80AB"
                    app:srcCompat="@drawable/ic_action_name"
                    tools:srcCompat="@drawable/ic_action_name" />
                <TextView
                    android:id="@+id/userSiteWeb"
                    android:textColor="@color/colorBlack"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="user site web" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingRight="15dp"

            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aPropos"
                android:textSize="30sp"
                android:textColor="@color/colorBlack"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="15dp"

                android:text="A propos de moi" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey" />

            <TextView
                android:id="@+id/userDescription"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:text="user description" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/userNameWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="175dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/colorWhite"
        android:text="Prénom"
        android:textSize="30sp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnAddFavoriteNeighbour"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/colorGrey"
        android:clickable="false"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginStart="12dp"
        android:backgroundTint="@android:color/transparent"
        android:color="@color/colorWhite"
        android:tint="#838383"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ImageButton
        android:id="@+id/btnBackToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:tint="#FFFFFF"
        app:srcCompat="?attr/actionModeCloseDrawable" />

</RelativeLayout>



